# lvlg_file_viewer

./: .gitignore  meson.build  meson_options.txt  tasks.py
src/: main.c  meson.build
src/reading_area/: reading_area.h
src/title_bar/: title_bar.h
src/utils/: settings.h
src/x11_driver/: meson.build  mouse_cursor_icon.c  x11_driver.h
subprojects/: c_minilib_error.wrap  lv_conf.h  lvgl.wrap  stc.wrap
subprojects/packagefiles/lvgl/: lv_conf.h
